<resources>
    <string name="app_name">PopularMoviesUdacity</string>

    <string name="content_authority">pop.moviesdb.popularmoviesudacity</string>

    <!-- Main screen start-->
    <string name="movies_image">Movie\'s Image</string>
    <string name="video_icon">Video\'s Play Arrow icon</string>
    <string name="action_settings">Settings</string>
    <string name="action_most_popular">Most Popular</string>
    <string name="action_top_rated">Top Rated</string>
    <string name="action_favorites">Favorites</string>
    <!-- Main screen end-->

    <!-- Details screen start-->
    <string name="details_backdrop_image_content_description">Backdrop image</string>
    <string name="details_details">Details</string>
    <string name="details_rating">Rating : </string>
    <string name="details_release_year">Release Date : </string>
    <string name="details_overview">Overview </string>
    <string name="details_videos">Videos </string>
    <string name="details_reviews">Reviews </string>
    <!-- Details screen end-->

    <string name="load_favorites_label">LoadFavoritesService</string>

</resources>
