<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_content"
    android:layout_width="match_parent" android:layout_height="match_parent" android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent" android:layout_height="@dimen/detail_backdrop_height"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:fitsSystemWindows="true">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent" android:layout_height="match_parent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed" android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary" app:expandedTitleMarginStart="48dp" app:expandedTitleMarginEnd="64dp">

            <ImageView
                android:id="@+id/iv_details_backdrop"
                android:layout_width="match_parent" android:layout_height="match_parent"
                android:scaleType="centerCrop" android:fitsSystemWindows="true" app:layout_collapseMode="parallax"
                android:contentDescription="@string/details_backdrop_image_content_description" />

            <android.support.v7.widget.Toolbar
                android:id="@+id/tb_details_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:layout_collapseMode="pin" />

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingTop="24dp">

            <android.support.v7.widget.CardView
                android:layout_margin="16dp"
                android:layout_width="match_parent" android:layout_height="wrap_content">

                <LinearLayout
                    style="@style/Widget.CardContent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/details_details"
                        android:layout_marginBottom="16dp"
                        android:textAppearance="@style/TextAppearance.AppCompat.Title" />

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent" android:layout_height="wrap_content">

                        <TextView
                            android:text="@string/details_rating"
                            android:textStyle="bold" android:textSize="@dimen/detail_details_section_header"
                            android:layout_width="wrap_content" android:layout_height="wrap_content" />

                        <TextView
                            android:id="@+id/tv_details_rating"
                            android:textSize="@dimen/detail_details_section_content"
                            android:layout_width="wrap_content" android:layout_height="wrap_content" />

                    </LinearLayout>

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent" android:layout_height="wrap_content">

                        <TextView
                            android:text="@string/details_release_year"
                            android:textStyle="bold" android:textSize="@dimen/detail_details_section_header"
                            android:layout_width="wrap_content" android:layout_height="wrap_content" />

                        <TextView
                            android:id="@+id/tv_details_year"
                            android:textSize="@dimen/detail_details_section_content"
                            android:layout_width="match_parent" android:layout_height="wrap_content" />

                    </LinearLayout>

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp">

                <LinearLayout
                    style="@style/Widget.CardContent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/details_overview"
                        android:textAppearance="@style/TextAppearance.AppCompat.Title" />

                    <TextView
                        android:id="@+id/tv_details_overview"
                        android:textSize="@dimen/detail_overview_textsize"
                        android:layout_width="match_parent" android:layout_height="wrap_content" />

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent" android:layout_height="wrap_content"
                android:layout_margin="16dp">

                <LinearLayout
                    style="@style/Widget.CardContent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="match_parent" android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/details_videos"
                        android:textAppearance="@style/TextAppearance.AppCompat.Title" />

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/rv_details_video_list"
                        android:layout_width="match_parent" android:layout_height="wrap_content"/>

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent" android:layout_height="wrap_content"
                android:layout_margin="16dp">

                <LinearLayout
                    style="@style/Widget.CardContent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="match_parent" android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/details_reviews"
                        android:textAppearance="@style/TextAppearance.AppCompat.Title" />

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/rv_details_reviews_list"
                        android:layout_width="match_parent" android:layout_height="wrap_content"/>

                </LinearLayout>

            </android.support.v7.widget.CardView>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_details_add_favorite"
        android:src="@drawable/ic_star"
        android:layout_height="wrap_content" android:layout_width="wrap_content"
        app:backgroundTint="@color/white"
        app:layout_anchor="@id/appbar" app:layout_anchorGravity="bottom|right|end"
        android:layout_margin="@dimen/detail_fab_button_margin" android:clickable="true"/>

</android.support.design.widget.CoordinatorLayout>